# wallpaper-rs

./: Cargo.toml  LICENSE  README.md  config.toml.example  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yml  cachix.yml  check.yml  code-quality.yml  update.yml
nix/: home-module.nix  module.nix  package.nix  shell.nix
src/: buffer.rs  config.rs  dispatch.rs  globals.rs  lib.rs  main.rs  output.rs  render.rs  renderer.rs  session.rs  shm.rs  state.rs  surface.rs  wallpaper.rs  wayland.rs
src/config/: mod.rs  types.rs
src/image/: mod.rs  resize.rs
src/shm/: buffer.rs  fd.rs  mod.rs
src/transition/: animation.rs  effects.rs  fade.rs  keyframe.rs  mod.rs  radial.rs  wave.rs
src/transition/effects/: fade.rs  mod.rs  radial.rs  wave.rs
src/wayland/: dispatch.rs  globals.rs  handlers.rs  mod.rs  output.rs  state.rs  surface.rs
