[package]
name = "wallpaper-rs"
version = "26.3.0"
edition = "2024"
description = "A minimal wallpaper daemon for Wayland, written in Rust."
license = "MIT"
authors = ["Ilham Putra Husada <hambosto@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hambosto/wallpaper-rs"
repository = "https://github.com/hambosto/wallpaper-rs"

[dependencies]
animato-core = "1.5.0"
anyhow = "1.0.102"
dirs = "6.0.0"
fast_image_resize = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
jxl-oxide = { version = "0.12.6", features = ["image"] }
serde = { version = "1.0.228", features = ["derive"] }
smart-default = "0.7.1"
smithay-client-toolkit = "0.20.0"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wayland-client = "0.31.14"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
