[package]
name = "wallpaper-rs"
version = "26.3.0"
edition = "2024"
license = "MIT"
authors = ["Ilham Putra Husada <hambosto@gmail.com>"]
homepage = "https://github.com/hambosto/wallpaper-rs"
repository = "https://github.com/hambosto/wallpaper-rs"

[dependencies]
animato-core           = "1.7.2"
anyhow                 = "1.0.104"
fast_image_resize      = "6.0.0"
garb                   = "0.2.8"
image                  = "0.25.10"
serde                  = { version = "1.0.229", features = ["derive"] }
smart-default          = "0.7.1"
smithay-client-toolkit = "0.21.0"
toml                   = "1.1.2"
tracing                = "0.1.44"
tracing-subscriber     = "0.3.23"
wayland-client         = "0.31.14"
xdg                    = "3.0.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7.0"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = true

[lints.clippy]
chunks_exact_to_as_chunks = "allow"
